# learn-computer-vision

./: .env.example  Makefile  Pipfile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
learn_computer_vision/: __init__.py  dataset.py  features.py  plots.py
learn_computer_vision/modeling/: predict.py  train.py
learn_convnet/: __init__.py  config.py  dataset.py  features.py  plots.py
learn_convnet/modeling/: predict.py  train.py
models/: 1-procesar-datos-crudos.ipynb
